# ScalpEdge

./: .gitignore  .sops.yaml  CLAUDE.md  README.md  flake.nix  main.py  pyproject.toml
scalpedge/: __init__.py  backtester.py  dashboard.py  data.py  live_engine.py  ml.py  options.py  probabilities.py  strategies.py  ta_indicators.py
secrets/: polygon_api_key
tests/: test_scalpedge.py
