[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scalpedge"
version = "0.1.0"
description = "Intraday 5-minute candle scalping backtester for SPY and TSLA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.55",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
ta = [
    "pandas-ta>=0.3.14b",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
